# gtknodes

./: Makefile.am  README.md  autogen.sh  configure.ac  gtknodes.pc.in  meson.build
docs/reference/gtknodes/: Makefile.am
examples/: Makefile.am  README.md  c_binary_adder.xml  demo.c  example.vala  img.py  py_img_proc.xml
examples/nodes/: node_binary_decode.c  node_binary_encode.c  node_bitwise_and.c  node_bitwise_not.c  node_bitwise_or.c  node_bitwise_xor.c  node_convert_number.c  node_pulse.c  node_show_number.c  node_step.c
examples/nodes/include/: node_binary_decode.h  node_binary_encode.h  node_bitwise_and.h  node_bitwise_not.h  node_bitwise_or.h  node_bitwise_xor.h  node_convert_number.h  node_pulse.h  node_show_number.h  node_step.h  nodes_common.h
glade/: Makefile.am  gtknodes.xml
introspection/: Makefile.am
src/: Makefile.am  gtknode.c  gtknode.h  gtknodesocket.c  gtknodesocket.h  gtknodeview.c  gtknodeview.h
vapi/: Makefile.am  libgtknodes.deps
